Updated Project section to highligh what I'm working on

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>PHILIP KWAKU DUAH DE-GRAFT</h1>
 					<p>
-							ASPIRING SOFTWARE ENGINEER</span>, <br> FRONT END & MOBILE APP DEVELOPER<br />
+							ASPIRING SOFTWARE ENGINEER</span>, <br> FRONT END & NATIVE DEVELOPER<br />
 					</p>
 					</header>
 
@@ -106,35 +106,83 @@
 								<header class="major">
 									<h2>Project Portfolio</h2>
 									<p>Check out some of my recent projects and see how I've applied my skills to create innovative solutions.</p>
-									I completed a simulation focused on the process of completing an engineering ticket for a system in the credit-card rewards department 
+									<!-- I completed a simulation focused on the process of completing an engineering ticket for a system in the credit-card rewards department 
 									of JPMorgan Chase & Co. During this simulation, I fixed broken files in the repository to ensure the web application output correctly, 
 									used JPMorgan Chase\’s open-source library called Perspective to generate a live graph for traders to monitor data feeds, set up a local 
 									development environment by downloading necessary files, tools, and dependencies, and created a new class to get an existing system up and running.
-								</p>
+								</p> -->
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<!-- <span class="icon solid fa-code-branch"></span> -->
+										<div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+											<figure class="image is-3by2"><img class="project-thumb" src="images/jp-morgan-chase-logo.png">
+											  <figcaption>
+												<h1 class="title is-size-5 is-size-4-widescreen">SWE Simulation on Forage</h1>
+												<a class="button is-primary is-outlined is-rounded" href="https://github.com/kwakuduah12/forage-jpmc" target="_blank"><span>GitHub Repo</span>
+												<span class="icon"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" 
+												role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg=""><path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
+												</svg><!-- <i class="fas fa-angle-right"></i> --></span></a>
+											  </figcaption>
+											  <div class="overlay"></div>
+										<!-- <strong>5,120</strong> Etiam -->
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<!-- <span class="icon fa-folder-open"></span>
+										<strong>8,192</strong> Magna -->
+										<div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+											<figure class="image is-3by2"><img class="project-thumb" src="images/skyscanner.jpg">
+											  <figcaption>
+												<h1 class="title is-size-5 is-size-4-widescreen">SWE Simulation on Forage</h1>
+												<a class="button is-primary is-outlined is-rounded" href="https://github.com/kwakuduah12/skyscanner" target="_blank"><span>GitHub Repo</span>
+												<span class="icon"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" 
+												role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg=""><path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
+												</svg><!-- <i class="fas fa-angle-right"></i> --></span></a>
+											  </figcaption>
+											  <div class="overlay"></div>
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<!-- <span class="icon solid fa-signal"></span>
+										<strong>2,048</strong> Tempus -->
+										
+											</section>
+						<section id="second" class="main special">
+							<ul class="statistics">
 									</li>
 									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<!-- <span class="icon solid fa-laptop"></span>
+										<strong>4,096</strong> Aliquam -->
+										<div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+											<figure class="image is-3by2"><img class="project-thumb" src="images/weather.jpg">
+											  <figcaption>
+												<h1 class="title is-size-5 is-size-4-widescreen">Weather App</h1>
+												<a class="button is-primary is-outlined is-rounded" href="https://github.com/kwakuduah12/Weather-App" target="_blank"><span>GitHub Repo</span>
+												<span class="icon"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" 
+												role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg=""><path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
+												</svg><!-- <i class="fas fa-angle-right"></i> --></span></a>
+											  </figcaption>
+											  <div class="overlay"></div>
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<!-- <span class="icon fa-gem"></span>
+										<strong>1,024</strong> Nullam -->
+										<div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+											<figure class="image is-3by2"><img class="project-thumb" src="images/paper-rock-scissors.jpg">
+											  <figcaption>
+												<h1 class="title is-size-5 is-size-4-widescreen"> Rochambeau </h1>
+												<a class="button is-primary is-outlined is-rounded" href="https://github.com/kwakuduah12/rock-paper-scissors" target="_blank"><span>GitHub Repo</span>
+												<span class="icon"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" 
+												role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg=""><path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
+												</svg><!-- <i class="fas fa-angle-right"></i> --></span></a>
+											  </figcaption>
+											  <div class="overlay"></div>
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. 
+									Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. 
+									Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. 
+									Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. 
+									Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
